2013-09-10  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(BUILD_VERSION): Renamed from OPENJDK_VERSION.
	(COMBINED_VERSION): Use BUILD_VERSION.
	(ICEDTEA_ENV): Likewise.
	(dist-openjdk): Should really use COMBINED_VERSION.
	(dist-openjdk-fsg): Likewise.
	(dist-openjdk-fsg-tz): Additional target which
	makes an xz tarball instead of a zip (for Jiri ;)

2014-09-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add bug reference for system LCMS support.

2014-08-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add bug reference for AArch64 import.

2014-02-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add Gentoo bug reference for
	PaX update.

2014-02-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_PAX): Leave PAX_COMMAND with the empty
	string rather than "not specified" to avoid build
	failures.
	* pax-mark-vm.in: Update PAX_COMMAND check.

2014-02-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1965: Update PaX support to detect running PaX
	kernel and use newer tools
	* NEWS: Updated.
	* acinclude.m4:
	(IT_HAS_PAX): New macro to detect whether the running
	kernel uses PaX.
	(IT_WITH_PAX): Rewritten to search for PaX tools -
	currently paxmark.sh, paxctl-ng, chpax and paxctl -
	and fail if a tool isn't found and a PaX kernel is
	being used.

2014-08-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(icedtea): Fix path to finished image.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.

2012-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* AUTHORS: Add Ralph Sennhauser.

2012-02-03  Ralph Sennhauser <sera@gentoo.org>

	* Makefile.am:
	(icedtea): Run pax-mark-vm on the just-built image.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	* acinclude.m4:
	(IT_WITH_PAX): Check for a pax command being specified.
	* configure.ac:
	Call IT_WITH_PAX.
	* pax-mark-vm.in:
	Script to PaX mark a JDK image.
